--- a/style.css
+++ b/style.css
@@ -3,31 +3,59 @@ body {
   margin: 0;
   padding: 0;
 }
+
 header {
   background-color: #5a8f7e;
   color: white;
   padding: 10px;
   text-align: center;
 }
+
 header p {
   font-family: "Montserrat", sans-serif;
   margin-top: -20px;
 }
+
 h1 {
   font-family: "Sacramento", cursive;
   font-weight: normal;
   font-size: 34pt;
 }
+
 body {
   background-color: #e6dcd0;
 }
+
+.maincontainer {
+  position: absolute;
+}
+
 .card {
   width: 100px;
   height: 130px;
   border: 4px solid white;
   border-radius: 5px;
   margin: 6px;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: all 0.8s ease;
 }
+
+.front {
+  position: absolute;
+  backface-visibility: hidden;
+}
+
+.back {
+  position: absolute;
+  backface-visibility: hidden;
+  transform: rotateY(180deg);
+}
+
+.flipCard {
+  transform: rotateY(180deg);
+}
+
 footer {
   background-color: #5a8f7e;
   padding: 10px;
