--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
 /* reset */
-body {
+body,
+header,
+h1 {
   margin: 0;
   padding: 0;
+}
+body {
+  background-color: #e6dcd0;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 header {
@@ -20,35 +28,48 @@ h1 {
   font-family: "Sacramento", cursive;
   font-weight: normal;
   font-size: 34pt;
+  margin-bottom: 7px;
 }
-
-body {
-  background-color: #e6dcd0;
+main {
+  flex: 1;
 }
 
 .maincontainer {
-  position: absolute;
+  height: 100%;
   display: flex;
   flex-wrap: wrap;
+
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .card {
-  width: 100px;
-  height: 130px;
+  width: 30%;
+  height: 20%;
   border: 4px solid white;
   border-radius: 5px;
-  margin: 6px;
+  box-sizing: border-box;
   position: relative;
   transform-style: preserve-3d;
   transition: all 0.8s ease;
 }
 
+img {
+  width: 100%;
+  height: 100%;
+}
+
 .front {
+  margin: 0;
+  height: 100%;
+  width: 100%;
   position: absolute;
   backface-visibility: hidden;
 }
 
 .back {
+  height: 100%;
+  width: 100%;
   position: absolute;
   backface-visibility: hidden;
   transform: rotateY(180deg);
@@ -60,8 +81,24 @@ body {
 
 footer {
   background-color: #5a8f7e;
-  padding: 10px;
-  position: absolute;
+  padding: 12px;
   bottom: 0;
-  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+button {
+  margin-right: 50px;
+  background-color: #003d2a;
+  color: white;
+  border: solid 1px white;
+  padding: 2px;
+  border-radius: 25%;
+}
+
+.timer {
+  margin-left: 50px;
+  border: white 1px solid;
+  height: 10px;
+  width: 20px;
 }
