--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ img {
   width: 100%;
   position: absolute;
   backface-visibility: hidden;
+  background-image: url("assets/card-back.svg");
 }
 
 .back {
