--- a/style.css
+++ b/style.css
@@ -30,6 +30,9 @@ h1 {
   font-size: 34pt;
   margin-bottom: 7px;
 }
+audio {
+  display: none;
+}
 main {
   flex: 1;
 }
@@ -93,13 +96,75 @@ button {
   background-color: #003d2a;
   color: white;
   border: solid 1px white;
-  padding: 2px;
+  padding: 10px;
   border-radius: 25%;
 }
 
 .timer {
-  margin-left: 50px;
+  left: 50px;
   border: white 1px solid;
   height: 10px;
   width: 20px;
 }
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 145px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  position: relative;
+  margin: auto;
+  text-align: center;
+  background-color: #ac80a0;
+  color: white;
+  padding: 2.5rem;
+  font-family: "Montserrat", sans-serif;
+  border: 5px dotted #d1ca98;
+  border-radius: 20%;
+  width: 50%;
+}
+
+.modal h2 {
+  font-family: "Sacramento", cursive;
+  font-size: 30px;
+  font-weight: lighter;
+  margin: 0;
+}
+.close {
+  color: #aaa;
+  float: right;
+  top: 0;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+.modal h6 {
+  font-style: italic;
+  font-weight: lighter;
+}
+@media only screen and (min-width: 760px) {
+  .card {
+    width: 23%;
+    height: 32%;
+    margin: 5px;
+  }
+  .modal-content {
+    width: 25%;
+  }
+} ;
