--- a/style.css
+++ b/style.css
@@ -102,6 +102,10 @@ button {
   font-size: 15px;
 }
 
+.hide {
+  display: none;
+}
+
 button:hover {
   background-color: #edbf85;
 }
@@ -123,7 +127,6 @@ button:hover {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -136,7 +139,33 @@ button:hover {
   padding: 2.5rem;
   font-family: "Montserrat", sans-serif;
   border: 5px dotted #d1ca98;
-  border-radius: 20%;
+  border-radius: 20px;
+  width: 50%;
+}
+
+.win-modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 145px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.win-statement {
+  position: relative;
+  margin: auto;
+  text-align: center;
+  background-color: #ac80a0;
+  color: white;
+  padding: 2.5rem;
+  font-family: "Montserrat", sans-serif;
+  border: 5px dotted #d1ca98;
+  border-radius: 20px;
   width: 50%;
 }
 
@@ -148,7 +177,15 @@ button:hover {
 }
 
 .close {
-  color: #aaa;
+  color: #fff;
+  float: right;
+  top: 0;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+#win-close {
+  color: #fff;
   float: right;
   top: 0;
   font-size: 28px;
@@ -165,10 +202,6 @@ button:hover {
 .modal h6 {
   font-style: italic;
   font-weight: lighter;
-}
-
-.win-modal {
-  background-color: pink;
 }
 
 footer {
